--- a/index.html
+++ b/index.html
@@ -364,6 +364,15 @@
       max-width: 160px;
     }
   }
+  
+  .banner-wrapper {
+  max-width: 100% !important;
+  margin: 0 !important;
+  padding: 0 15px; /* optional, small side padding */
+  box-shadow: none; /* remove shadow if you want edge to edge */
+  border-radius: 0;
+}
+
 </style>
 </head>
 <body>
