--- a/index.html
+++ b/index.html
@@ -309,6 +309,14 @@
     background-color: #135ba1; /* darker blue */
     color: white;
   }
+  
+  .banner-wrapper {
+  max-width: 100% !important;
+  margin: 0 !important;
+  padding: 0 15px; /* optional, small side padding */
+  box-shadow: none; /* remove shadow if you want edge to edge */
+  border-radius: 0;
+}
 </style>
 </head>
 <body>
@@ -432,6 +440,5 @@
     }, 4000);
   }
 </script>
-
 </body>
 </html>
